--- a/src/content/getusermedia/gum/index.html
+++ b/src/content/getusermedia/gum/index.html
@@ -31,12 +31,10 @@
 <body>
 
 <div id="container">
-    <h1><a href="//webrtc.github.io/samples/" title="WebRTC Test">WebRTC getUserMedia Test</a>
-        <span>getUserMedia</span></h1>
+    <h1><span>getUserMedia Test</span></h1>
 
     <video id="gum-local" autoplay playsinline></video>
     <button id="showVideo">Open camera</button>
-
 
 </div>
 
