--- a/src/content/getusermedia/gum/index.html
+++ b/src/content/getusermedia/gum/index.html
@@ -34,7 +34,7 @@
     <h1><span>getUserMedia Test</span></h1>
 
     <video id="gum-local" autoplay playsinline></video>
-    <button id="showDevices">Show list of cameras</button>
+    <!-- <button id="showDevices">Show list of cameras</button> -->    
     <button id="showVideo">Open camera</button>
 
 </div>
