--- a/src/content/getusermedia/gum/index.html
+++ b/src/content/getusermedia/gum/index.html
@@ -32,6 +32,14 @@
 
 <div id="container">
     <h1><span>getUserMedia Test</span></h1>
+    
+    <div class="select">
+        <label for="audioSource">Audio input source: </label><select id="audioSource"></select>
+    </div>
+
+    <div class="select">
+        <label for="videoSource">Video source: </label><select id="videoSource"></select>
+    </div>
 
     <video id="gum-local" autoplay playsinline></video>
     <!-- <button id="showDevices">Show list of cameras</button> -->    
