--- a/src/content/devices/input-output/index.html
+++ b/src/content/devices/input-output/index.html
@@ -49,16 +49,23 @@
 
     <h1><span>getUserMedia Test</span></h1>
 
-
     <div class="select">
         <label for="videoSource">Video source: </label><select id="videoSource"></select>
     </div>
 
+    <div>
+    </div>
+
+    <button id="getDevices">Find devices</button>
+
     <video id="video" playsinline autoplay></video>
 
-    <button id="showVideo">Find devices</button>
+    <!--  <button id="showVideo">Open camera (no constraints)</button> -->
+
+    <button id="showCMSVideo">Open camera (CMS constraints)</button>
 
 </div>
+
 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/main.js" async></script>
